--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -4,7 +4,7 @@
     margin: 2em auto;
     padding: 2em;
     border-radius: 10px;
-    transition: border 250ms;
+    transition: border 100ms;
     cursor: pointer;
     text-align: center;
 }
@@ -16,4 +16,11 @@
 .projectTitle {
     font-size: 1.25rem;
     margin-bottom: 10px;
+}
+
+.todoContainer {
+    margin-top: 1em;
+    background-color: rgba(100, 100, 100, 0.2);
+    padding: 1em;
+    border-radius: 10px;
 }
