--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,6 +3,10 @@
 }
 
 .header {
-    margin-top: 1em;
     font-size: 2rem;
+    width: max-content;
+    margin: 1em auto 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
