--- a/src/components/element/element.css
+++ b/src/components/element/element.css
@@ -44,3 +44,44 @@ input::-webkit-calendar-picker-indicator {
 .label {
     color: rgb(190, 202, 202);
 }
+
+.dropdownDiv {
+    border: 1px solid rgba(172, 172, 172, 0.72);
+    border-radius: 5px;
+    font-size: 1.25rem;
+    margin-bottom: 1em;
+    padding: .5em 1em;
+    transition: all 500ms;
+    position: relative;
+}
+
+.dropdownLabel {
+    position: absolute;
+    top: -1.25rem;
+    color: rgb(190, 202, 202);
+    font-size: 1rem;
+    width: 100%;
+    left: 0;
+}
+
+.dropdownPrompt {
+    cursor: pointer;
+}
+
+.option {
+    cursor: pointer;
+    border: 1px solid rgba(172, 172, 172, 0.72);
+    border-radius: 5px;
+    margin: .25em 0;
+    padding: .5em 0;
+}
+
+.dropdownPrompt:hover,
+.option:hover {
+    color: white;
+}
+
+.option:hover {
+    border: 1px solid white;
+    box-shadow: 0px 5px 5px 0px rgba(178, 178, 178, .3);
+}
