--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Chilanka&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Chilanka&display=swap");
 
 * {
-    margin: 0;
+  margin: 0;
 }
 
 body {
-    background-color: #040911;
-    color: rgb(190, 202, 202);
-    font-family: 'Chilanka', cursive;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-color: #040911;
+  color: rgb(190, 202, 202);
+  font-family: "Chilanka", cursive;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
