--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -23,7 +23,7 @@
   background-color: rgba(100, 100, 100, 0.1);
   padding: .5em;
   border-radius: 10px;
-  transition: all 300ms, scale 100ms;
+  transition: all 200ms, scale 500ms, box-shadow 500ms;
   border: 2px solid rgba(235, 235, 235, 0);
   box-shadow: 0px 5px 5px 0px rgba(178, 178, 178, 0.2);
 }
