Add row styling

--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -87,7 +87,17 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-evenly;
   padding: 1em 0;
-  /* border: 2px solid white; */
+  border: 2px solid rgba(235, 235, 235, 0);
+  border-radius: 10px;
+  transition:
+    all 300ms,
+    color 100ms;
+}
+
+.row:hover {
+  color: white;
+  border: 2px solid rgba(235, 235, 235, 0.2);
 }
 
