--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -83,6 +83,16 @@
   margin: 0 1em;
 }
 
+.check:hover {
+  border: 2px solid green;
+  box-shadow: 0px 5px 5px 0px rgba(46, 125, 50, 0.5);
+}
+
+.trash:hover {
+  border: 2px solid red;
+  box-shadow: 0px 5px 5px 0px rgba(198, 40, 40, 0.5);
+}
+
 .row {
   display: flex;
   flex-direction: row;
