--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -2,9 +2,9 @@
   border: 2px solid rgba(172, 172, 172, 0.72);
   width: max-content;
   margin: 2em auto;
-  padding: 2em;
+  padding: 1em;
   border-radius: 10px;
-  transition: border 100ms;
+  transition: border 300ms;
   text-align: center;
 }
 
@@ -14,6 +14,10 @@
 
 .projectTitle {
   font-size: 1.25rem;
+  margin-bottom: 10px;
+}
+
+.projectDate {
   margin-bottom: 10px;
 }
 
@@ -113,4 +117,16 @@
 
 .checklistDone {
   text-decoration: line-through;
+}
+
+.removeProjectButton {
+  border: 2px solid rgba(146, 2, 0, 0.5);
+  background-color: rgba(146, 2, 0, 0);
+  transition: all 250ms;
+}
+
+.removeProjectButton:hover {
+  border: 2px solid rgba(146, 2, 0, 1);
+  background-color: rgba(146, 2, 0, 0.3);
+  box-shadow: 0px 5px 5px 0px rgba(146, 2, 0, 0.3);
 }
