--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -22,15 +22,12 @@
 }
 
 .todoContainer {
-  /* margin-top: 1em; */
   cursor: pointer;
-  background-color: rgba(100, 100, 100, 0.1);
   padding: 0.5em;
   border-radius: 10px;
   transition:
     all 200ms,
     scale 500ms;
-  box-shadow: 0px 5px 5px 0px rgba(178, 178, 178, 0.2);
 }
 
 .todoContainer > p {
@@ -39,10 +36,9 @@
 
 .todoContainer:hover,
 .todoActionButton:hover {
-  background-color: rgba(100, 100, 100, 0.3);
+  background-color: rgba(100, 100, 100, 0.1);
   color: white;
-  box-shadow: rgba(255, 255, 255, 0.2) 0px 20px 30px;
-  scale: 1.05;
+  box-shadow: 0px 5px 5px 0px rgba(178, 178, 178, 0.2);
 }
 
 .todoActionButton:hover {
@@ -100,12 +96,13 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding: 1em 0;
+  padding: 0.5em 0;
   border: 2px solid rgba(235, 235, 235, 0);
   border-radius: 10px;
   transition:
     all 300ms,
     color 100ms;
+  margin: 0.25em 0;
 }
 
 .row:hover {
